# Sketches_CPP_QT

./: README.md
ConvertCoordinat/: CMakeLists.txt  convertcoordinat.cpp  icons_app.rc  (+3 more)
ConvertCoordinate_Dec_Min/: CMakeLists.txt
Parsing-CSV-File/Example2/: CMakeLists.txt  README.md  files.qrc  main.cpp
Parsing-XML-File/Example2/: CMakeLists.txt  test.xml  xmlParser.cpp
Parsing/Parsing-XML-File/Example1/: CMakeLists.txt
Parsing/Parsing-XML-File/Example8/: CMakeLists.txt  mainwindow.cpp
Patterns/Behavioral/1.ChainOfResponsibility/: CMakeLists.txt  cor_broker.cpp  cor_pointer.cpp
Patterns/Behavioral/3.Interpreter/: CMakeLists.txt  interpreter.cpp
Patterns/Behavioral/4.Overmath/: CMakeLists.txt
Patterns/Behavioral/4.Overmath/Overmath/: stdafx.h  targetver.h
Patterns/Behavioral/4.Overmath/Overmath.Notepad/: stdafx.h
Patterns/Behavioral/5.Iterator/: CMakeLists.txt  facade.cpp  iterator.cpp
Patterns/Behavioral/6.Mediator/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  Person.cpp  Person.h  chat.cpp  mediator.cpp
Patterns/Creational/1.Preliminaries/: BoostDI.cpp  CMakeLists.txt  LSP.cpp  OCP.cpp
Patterns/Creational/2.Builder/: Builder.cpp  CMakeLists.txt  Facets.cpp  GroovyStyle.cpp  InnerFactory.cpp  Person.h  PersonAddressBuilder.h
Patterns/Creational/3_Factories/: AbstractFactory.cpp  CMakeLists.txt  FactoryMethod.cpp
Patterns/Creational/4_Prototype/: CMakeLists.txt  Prototype.cpp  Serialization.cpp
Patterns/Creational/5_Singleton/: CMakeLists.txt  Singleton.hpp
Patterns/Structural-adapter-decorator/1.Adapter/: CMakeLists.txt
Patterns/Structural-adapter-decorator/1.Adapter/Structural/: stdafx.h
Patterns/Structural-adapter-decorator/2.Bridge/: CMakeLists.txt  Person.h  Structural.cpp
Patterns/Structural-adapter-decorator/4.Decorator/: CMakeLists.txt  decorator.cpp
Patterns/Visitor/1.Observer/: CMakeLists.txt  observer.cpp  observer2.cpp
Patterns/Visitor/2.State/: CMakeLists.txt  basic.cpp  msm.cpp
Patterns/Visitor/3.Strategy/: CMakeLists.txt  strategy_dynamic.cpp  strategy_static.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/: CMakeLists.txt
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_QMessageBox/: main.cpp  widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_about/: main.cpp  widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_aboutQt/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_critical/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_information/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_question/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_setStandardButtons/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_3_QMessageBox/10_3_warning/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/: CMakeLists.txt
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_QInputDialog/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_UseListViewForComboBoxItems/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_getDouble/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_getInt/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_getItem/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_getMultiLineText/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_getText/: main.cpp  widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_getText_Password/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_setComboBoxItems/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_setDoubleValue/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_setIntValue/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_setTextEchoMode/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_4_QInputDialog/10_4_setTextValue/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_5_QFileDialog/: CMakeLists.txt
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_5_QFileDialog/10_5_ShowDirsOnly/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 10/10_5_QFileDialog/10_5_getExistingDirectory/: widget.cpp
Qt-6-Developing-Window-Applications-in-CPP/Chapter 13/QtJsonReadWrite/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Qt-6-Developing-Window-Applications-in-CPP/Chapter 4/4_16_EventFilterOnApplicationDemo/: CMakeLists.txt
Qt-6-Developing-Window-Applications-in-CPP/Chapter 6/6_13_QSlider/: CMakeLists.txt
Qt-6-Developing-Window-Applications-in-CPP/Chapter 7/7_6_QItemSelectionModel/: CMakeLists.txt
Qt-6-GUI-Development-for-Beginners/5.Tour_Of_QtWidgets/: CMakeLists.txt
Qt-6-GUI-Development-for-Beginners/5.Tour_Of_QtWidgets/5-11QGridLayout/: widget.ui
Qt-6-GUI-Development-for-Beginners/5.Tour_Of_QtWidgets/5-14QListStringFromFile/: CMakeLists.txt  assistantodwgt.cpp  assistantodwgt.h  assistantodwgt.ui  main.cpp  resource.qrc
Qt-6-GUI-Development-for-Beginners/5.Tour_Of_QtWidgets/5-15QTabWidget/: widget.ui
Qt-6-GUI-Development-for-Beginners/5.Tour_Of_QtWidgets/5-4QPushButton/: widget.cpp
Qt-6-GUI-Development-for-Beginners/5.Tour_Of_QtWidgets/5-4QPushButtonWithIconText/: CMakeLists.txt  images.qrc  main.cpp  pushbutton_pic_text.cpp  pushbutton_pic_text.h  pushbutton_pic_text.ui
Qt-6-GUI-Development-for-Beginners/5.Tour_Of_QtWidgets/5-4QPushButton_Style/: CMakeLists.txt  mainwindow.ui
Sketches_QT/ShowBells/: Build_And_Deploy_In_One_Project.ps1  CMakeLists.txt  lb_bells.cpp  widget.cpp  widget.h
(+1673 files in other folders)
