cmake_minimum_required(VERSION 3.15)

project (5.ATourOfQtWidgets)

add_subdirectory(5-1QWidget)
add_subdirectory(5-2QMainWindow)
add_subdirectory(5-3QMessageBox)
add_subdirectory(5-4QPushButton)
add_subdirectory(5-5QLineEdit)
add_subdirectory(5-6QTextEdit)
add_subdirectory(5-7QLabel)
add_subdirectory(5-8QHBoxLayout)
add_subdirectory(5-9QVBoxLayout)
add_subdirectory(5-10SizePoliciesStretches)
add_subdirectory(5-11QGridLayout)
add_subdirectory(5-12CheckBoxesRadioButtons)
add_subdirectory(5-13QList)
add_subdirectory(5-14QListWidget)
add_subdirectory(5-14QListStringFromFile)
add_subdirectory(5-15QTabWidget)
add_subdirectory(5-16QComboBox)
add_subdirectory(5-17MenusToolbarsActions)