cmake_minimum_required(VERSION 3.15)

project (Chapter_10_3)

add_subdirectory(10_3_about)
add_subdirectory(10_3_aboutQt)
add_subdirectory(10_3_critical)
add_subdirectory(10_3_information)
add_subdirectory(10_3_QMessageBox)
add_subdirectory(10_3_question)
add_subdirectory(10_3_setStandardButtons)
add_subdirectory(10_3_warning)

