cmake_minimum_required(VERSION 3.15)

project (6_13_QSlider)

add_subdirectory(6_13_QSlider)
add_subdirectory(6_13_setInvertedAppearance)
add_subdirectory(6_13_setInvertedControls)
add_subdirectory(6_13_setTickPosition)
add_subdirectory(6_13_setTracking)
add_subdirectory(6_13_SIGNAL)
add_subdirectory(6_13_Step)
